cleaned up format, removed broken css sheet

--- a/login.html
+++ b/login.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>BBY06 Login</title>
+  <title>Login BBY06</title>
+
+  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
