--- a/details.html
+++ b/details.html
@@ -2,34 +2,28 @@
 <html lang="en">
 
 <head>
-
-  <title>Profile BBY06</title>
+  <title>Details BBY06</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <!-- Optional styles and scripts of your own -->
-    <link type="text/css" href="styles/my_style.css">
+  <!-- Bootstrap FirebaseUI CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Bootstrap FirebaseUI CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Firebase 8 CDNs-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
 
-    <!-- Firebase 8 CDNs-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <!-- Google Icons (Material Design)-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <!-- Link to the api keys for your firebase project -->
-    <script src="./scripts/my_script.js"></script>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
+  <!-- Link to the api keys for your firebase project -->
+  <script src="./scripts/my_script.js"></script>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
@@ -135,129 +129,104 @@
     }
 
     nav a:hover {
-      color:black;
+      color: black;
       background-color: whitesmoke;
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
 
     .collapsible {
-  color: white;
-  cursor: pointer;
-  padding: 2%;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-}
-
-.content {
-  padding: 0 5%;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
-
-}
-
-
-@media screen and (max-width: 700px){
-    header {
-      position: fixed;
-      bottom: 0;
+      color: white;
+      cursor: pointer;
+      padding: 2%;
       width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
     }
-  }
 
+    .content {
+      padding: 0 5%;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+      background-color: #f1f1f1;
+
+    }
+
+
+    @media screen and (max-width: 700px) {
+      header {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    }
   </style>
-
-
-
-
 </head>
 
 <body>
-
-
   <header>
-
     <div class="container">
-
       <img src="images/bowl.png" alt="logo" class="logo">
-
       <nav>
         <ul>
           <li><a href="main.html"><i class="material-icons" style="font-size: 100%;">home</i>Home</a></li>
           <li><a href="menu.html"><i class="material-icons" style="font-size: 100%;">restaurant_menu</i>Menu</a></li>
-          <li><a href="profile.html"><i class="material-icons" style="font-size: 100%;">account_circle</i>Profile</a></li>
+          <li><a href="profile.html"><i class="material-icons" style="font-size: 100%;">account_circle</i>Profile</a>
+          </li>
         </ul>
       </nav>
-
     </div>
   </header>
 
   <div class="container rounded bg-white mt-5 mb-5">
 
-    
-      <img class="details-img" src="..." class="card-img-top" alt="...">
-      <h1 id="details-name"></h1>
-      <h3 id="details-serves"></h3>
-      <h3 id="details-prep"></h3>
-      <h2 id="details-description"></h2>
-      <h2 id="details-recipe"></h2>
-      <h2 id="details-ingredients"></h2>
-      <iframe id="details-youtube" width="420" height="345" src="...">
-      </iframe>
-      
-
-
-
-
-
+    <img class="details-img" src="..." class="card-img-top" alt="...">
+    <h1 id="details-name"></h1>
+    <h3 id="details-serves"></h3>
+    <h3 id="details-prep"></h3>
+    <h2 id="details-description"></h2>
+    <h2 id="details-recipe"></h2>
+    <h2 id="details-ingredients"></h2>
+    <iframe id="details-youtube" width="420" height="345" src="...">
+    </iframe>
   </div>
-  
-
 
   <script>
-
-function showDetails() {
-            // create a URL object
-            let params = new URL(window.location.href);
-            let urlstring = params.searchParams.get("collection");   //parse "collection"
-            let patharray = urlstring.split('?');
-            // console.log(patharray[1].replace('id=',''));}
-              db.collection(patharray[0]).doc(patharray[1].replace('id=','')).get().then(userDoc => { 
+    function showDetails() {
+      // create a URL object
+      let params = new URL(window.location.href);
+      let urlstring = params.searchParams.get("collection"); //parse "collection"
+      let patharray = urlstring.split('?');
+      // console.log(patharray[1].replace('id=',''));}
+      db.collection(patharray[0]).doc(patharray[1].replace('id=', '')).get().then(userDoc => {
         //         // querySnapshot.forEach(function (doc) {
-                  let name = userDoc.data().Name;
-                  let recipe = userDoc.data().Recipe;
-                  let description = userDoc.data().Description;
-                  let ingredients = userDoc.data().Ingredients;
-                  let prep = userDoc.data().Prep;
-                  let serves = userDoc.data().Serves;
-                  let youtube = userDoc.data().Youtube; 
+        let name = userDoc.data().Name;
+        let recipe = userDoc.data().Recipe;
+        let description = userDoc.data().Description;
+        let ingredients = userDoc.data().Ingredients;
+        let prep = userDoc.data().Prep;
+        let serves = userDoc.data().Serves;
+        let youtube = userDoc.data().Youtube;
 
-                  console.log(name);
-                  document.getElementById("details-name").innerHTML = name;
-                  document.getElementById("details-recipe").innerHTML = recipe;
-                  document.getElementById("details-description").innerHTML = description;
-                  document.getElementById("details-ingredients").innerHTML = ingredients;
-                  document.getElementById("details-serves").innerHTML = serves;
-                  document.getElementById("details-prep").innerHTML = prep;
-                  document.getElementById("details-youtube").innerHTML = youtube;
-                  document.getElementById('details-img').src = "./images/" + name + ".jpg"; 
-                  newcard.querySelector('.details-img').src = "./images/" + name + ".jpg";  //hikes.jpg
+        console.log(name);
+        document.getElementById("details-name").innerHTML = name;
+        document.getElementById("details-recipe").innerHTML = recipe;
+        document.getElementById("details-description").innerHTML = description;
+        document.getElementById("details-ingredients").innerHTML = ingredients;
+        document.getElementById("details-serves").innerHTML = serves;
+        document.getElementById("details-prep").innerHTML = prep;
+        document.getElementById("details-youtube").innerHTML = youtube;
+        document.getElementById('details-img').src = "./images/" + name + ".jpg";
+        newcard.querySelector('.details-img').src = "./images/" + name + ".jpg"; //hikes.jpg
 
-              });
-
-            // let message = "name is: " + name;        //build message to display
-        //     // message += "Document id is:  " + id;
-            // document.getElementById("details-go-here").innerHTML = message;
-        }
-        showDetails();
-    </script>
-
-
-
-
+      });
+      // let message = "name is: " + name;        //build message to display
+      //     // message += "Document id is:  " + id;
+      // document.getElementById("details-go-here").innerHTML = message;
+    }
+    showDetails();
+  </script>
 </body>
 
 </html>
