--- a/index.html
+++ b/index.html
@@ -1,114 +1,122 @@
 <!Doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <title>Index BBY06</title>
 
-    <!-- Google Icons (Material Design)-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        nav {
-            background-color: #00d632;
-        }
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-        footer {
-            background-color: #00d632;
-        }
+  <!-- Google Icons (Material Design)-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        h1 {
-            color: #005c17;
-            text-align: center;
-            font-size: 250%;
-        }
+  <!-- link to the API keys for the firebase project -->
+  <script src="scripts/my_script.js"></script>
 
-        h2 {
-            color: #005c17;
-            text-align: center;
-        }
-        body{
-          background-color: rgb(219, 243, 219);
-        }
+  <style>
+    nav {
+      background-color: #00d632;
+    }
 
-        .button{
-          text-align: center;
-        }
+    footer {
+      background-color: #00d632;
+    }
 
+    h1 {
+      color: #005c17;
+      text-align: center;
+      font-size: 250%;
+    }
 
-    </style>
+    h2 {
+      color: #005c17;
+      text-align: center;
+    }
 
+    body {
+      background-color: rgb(219, 243, 219);
+    }
 
-    <title>Index BBY06</title>
+    .button {
+      text-align: center;
+    }
+  </style>
 
-    <!-- link to the API keys for the firebase project -->
-    <script src="scripts/my_script.js"></script>
+</head>
 
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand text-white" href="#">FitMeal</a>
-          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Extras
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Preferences</a></li>
-                  <li><a class="dropdown-item" href="#">Favorites</a></li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><a class="dropdown-item" href="#">Help</a></li>
-                </ul>
-              </li>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="#">FitMeal</a>
+      <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Extras
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Preferences</a></li>
+              <li><a class="dropdown-item" href="#">Favorites</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="#">Help</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-
-      <br>
-      <br>
-
-      <div>
-          <h1>
-          <i class="material-icons" style="font-size: 300%;">dinner_dining</i>
-          </h1>
-          <h1>Hungry for personalized meals?</h1>
-          <h2>Get started today!</h2>
-
-          <br>
-          <br>
-
-          <div class="button">
-            <a href="login.html" class="btn btn-warning btn-outline-success" style= "width: 200px"  float:right role="button"> Get Started! </a>
-          </div>
-
+          </li>
+        </ul>
       </div>
-      
-      <footer class="navbar justify-content-evenly fixed-bottom text-white">
-        <i class="material-icons">home</i>
-		<i class="material-icons">search</i>
-		<i class="material-icons">restaurant_menu</i>
-        <i class="material-icons">event</i>
-		<i class="material-icons">account_circle</i>
-      </footer>
+    </div>
+  </nav>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <br>
+  <br>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <div>
+    <h1>
+      <i class="material-icons" style="font-size: 300%;">dinner_dining</i>
+    </h1>
+    <h1>Hungry for personalized meals?</h1>
+    <h2>Get started today!</h2>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+    <br>
+    <br>
+
+    <div class="button">
+      <a href="login.html" class="btn btn-warning btn-outline-success" style="width: 200px" float:right role="button">
+        Get Started! </a>
+    </div>
+
+  </div>
+
+  <footer class="navbar justify-content-evenly fixed-bottom text-white">
+    <i class="material-icons">home</i>
+    <i class="material-icons">search</i>
+    <i class="material-icons">restaurant_menu</i>
+    <i class="material-icons">event</i>
+    <i class="material-icons">account_circle</i>
+  </footer>
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
