--- a/menu.html
+++ b/menu.html
@@ -2,34 +2,28 @@
 <html lang="en">
 
 <head>
-
-  <title>Profile BBY06</title>
+  <title>Menu BBY06</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <!-- Optional styles and scripts of your own -->
-    <link type="text/css" href="styles/my_style.css">
+  <!-- Bootstrap FirebaseUI CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Bootstrap FirebaseUI CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Firebase 8 CDNs-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
 
-    <!-- Firebase 8 CDNs-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <!-- Google Icons (Material Design)-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <!-- Link to the api keys for your firebase project -->
-    <script src="./scripts/my_script.js"></script>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
+  <!-- Link to the api keys for your firebase project -->
+  <script src="./scripts/my_script.js"></script>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
@@ -135,43 +129,38 @@
     }
 
     nav a:hover {
-      color:black;
+      color: black;
       background-color: whitesmoke;
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
 
     .collapsible {
-  color: white;
-  cursor: pointer;
-  padding: 2%;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-}
-
-.content {
-  padding: 0 5%;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
-
-}
-
-@media screen and (max-width: 700px){
-    header {
-      position: fixed;
-      bottom: 0;
+      color: white;
+      cursor: pointer;
+      padding: 2%;
       width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
     }
-  }
 
+    .content {
+      padding: 0 5%;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+      background-color: #f1f1f1;
+
+    }
+
+    @media screen and (max-width: 700px) {
+      header {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    }
   </style>
-
-
-
-
 </head>
 
 <body>
@@ -188,93 +177,81 @@
     </div>
   </template>
 
-
   <header>
-
     <div class="container">
-
       <img src="images/bowl.png" alt="logo" class="logo">
-
       <nav>
         <ul>
           <li><a href="main.html"><i class="material-icons" style="font-size: 100%;">home</i>Home</a></li>
           <li><a href="menu.html"><i class="material-icons" style="font-size: 100%;">restaurant_menu</i>Menu</a></li>
-          <li><a href="profile.html"><i class="material-icons" style="font-size: 100%;">account_circle</i>Profile</a></li>
+          <li><a href="profile.html"><i class="material-icons" style="font-size: 100%;">account_circle</i>Profile</a>
+          </li>
         </ul>
       </nav>
-
     </div>
   </header>
-
-
 
   <div class="container">
     <h1>Your Vegan gallery</h1>
     <!-- Here is container for cards  -->
     <div class="container">
       <div id="vegan_high-protein-go-here" class="row row-cols-auto">
-  
+
       </div>
     </div>
   </div>
-  
-
 
   <script>
     var coll = document.getElementsByClassName("collapsible");
     var i;
-    
+
     for (i = 0; i < coll.length; i++) {
-      coll[i].addEventListener("click", function() {
+      coll[i].addEventListener("click", function () {
         this.classList.toggle("active");
         var content = this.nextElementSibling;
-        if (content.style.maxHeight){
+        if (content.style.maxHeight) {
           content.style.maxHeight = null;
         } else {
           content.style.maxHeight = content.scrollHeight + "px";
-        } 
+        }
       });
     }
 
-
     function displayCards(collection) {
-                let CardTemplate = document.getElementById("CardTemplate");
+      let CardTemplate = document.getElementById("CardTemplate");
 
-                db.collection(collection).get()
-                    .then(snap => {
-                        var i = 1;
-                        snap.forEach(doc => {    //iterate thru each doc
-                            var title = doc.data().Name;
-                            var details = doc.data().Description;
-                            let newcard = CardTemplate.content.cloneNode(true);
+      db.collection(collection).get()
+        .then(snap => {
+          var i = 1;
+          snap.forEach(doc => { //iterate thru each doc
+            var title = doc.data().Name;
+            var details = doc.data().Description;
+            let newcard = CardTemplate.content.cloneNode(true);
 
-                            //update title and text and image
-                            newcard.querySelector('.card-title').innerHTML = title;
-                            newcard.querySelector('.card-text').innerHTML = details;
-                            newcard.querySelector('.card-image').src = "./images/" + collection + ".jpg";  //hikes.jpg
+            //update title and text and image
+            newcard.querySelector('.card-title').innerHTML = title;
+            newcard.querySelector('.card-text').innerHTML = details;
+            newcard.querySelector('.card-image').src = "./images/" + collection + ".jpg"; //hikes.jpg
 
-                            newcard.querySelector('.card-href').href = "details.html?collection="+collection+"?id=" + doc.id;    //firestore doc ID
+            newcard.querySelector('.card-href').href = "details.html?collection=" + collection + "?id=" + doc
+              .id; //firestore doc ID
 
-                            //give unique ids to all elements for future use
-                            newcard.querySelector('.card-title').setAttribute("id", "ctitle" + i);
-                            newcard.querySelector('.card-text').setAttribute("id", "ctext" + i);
-                            newcard.querySelector('.card-image').setAttribute("id", "cimage" + i);
+            //give unique ids to all elements for future use
+            newcard.querySelector('.card-title').setAttribute("id", "ctitle" + i);
+            newcard.querySelector('.card-text').setAttribute("id", "ctext" + i);
+            newcard.querySelector('.card-image').setAttribute("id", "cimage" + i);
 
-                            //attach to gallery
-                            document.getElementById(collection + "-go-here").appendChild(newcard);
-                        })
-                    })
-            }
+            //attach to gallery
+            document.getElementById(collection + "-go-here").appendChild(newcard);
+          })
+        })
+    }
 
-            displayCards("vegan_high-protein");
-            //displayCards("heros");
-            //displayCards("countries");
-            //displayCards("bikes");
-
-    </script>
-
-
-
+    displayCards("vegan_high-protein");
+    //displayCards("heros");
+    //displayCards("countries");
+    //displayCards("bikes");
+  </script>
 
 </body>
 
