--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <title>Quiz BBY06</title>
 
   <!-- Required meta tags -->
@@ -12,7 +11,6 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="/styles/quiz_style.css">
 
   <!-- Google Icons (Material Design)-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,10 +29,129 @@
   <script src="./scripts/my_script.js"></script>
 
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
+    nav {
+      font-family: 'Patrick Hand';
+      font-size: 50px;
+      text-shadow: 1px 1px 1px rgb(218, 218, 218);
+    }
+
     body {
       font-family: 'Patrick Hand';
       background-image: url(images/foodbackground.PNG);
       background-size: cover;
+    }
+
+    .form-control:focus {
+      box-shadow: none;
+      border-color: #BA68C8;
+    }
+
+    .profile-button {
+      background: rgb(0, 168, 28);
+      box-shadow: none;
+      border: none
+    }
+
+    .profile-button:hover {
+      background: rgb(86, 241, 112);
+    }
+
+    .profile-button:focus {
+      background: #682773;
+      box-shadow: none
+    }
+
+    .profile-button:active {
+      background: rgb(86, 241, 112);
+      box-shadow: none
+    }
+
+    .back:hover {
+      color: #682773;
+      cursor: pointer
+    }
+
+    .labels {
+      font-size: 11px
+    }
+
+    .add-experience:hover {
+      background: rgb(0, 168, 28);
+      color: #fff;
+      cursor: pointer;
+      border: solid 1px #BA68C8
+    }
+
+    .container {
+      width: 90%;
+      margin: auto;
+    }
+
+    header {
+      background: whitesmoke;
+    }
+
+    header::after {
+      content: '';
+      display: table;
+      clear: both;
+    }
+
+    .logo {
+      height: 15%;
+      width: 15%;
+      padding: 10px 0;
+
+    }
+
+    nav {
+      float: right;
+    }
+
+    nav ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+    }
+
+    nav li {
+      display: inline-block;
+      margin-left: 80px;
+      padding-top: 15px;
+    }
+
+    nav a {
+      color: black;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 2vw;
+    }
+
+    nav a:hover {
+      color: black;
+      background-color: whitesmoke;
+      background-image: radial-gradient(lightgreen, whitesmoke);
+    }
+
+    label {
+      font-size: 2vw;
+      color: black;
+      text-align: center;
+    }
+
+    *.form-check-input {
+      justify-content: center;
+    }
+
+    @media screen and (max-width: 700px) {
+      header {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
     }
   </style>
 </head>
@@ -200,8 +317,8 @@
     }
 
     function saveUserInfo() {
-      quiz1 = document.getElementById('flexRadioDefault1').value; //get the value of the field with id="nameInput"
-      quiz2 = document.getElementById('flexRadioDefault2').value; //get the value of the field with id="schoolInput"
+      quiz1 = document.getElementById('flexRadioDefault1').value;
+      quiz2 = document.getElementById('flexRadioDefault2').value;
       quiz3 = document.getElementById('flexRadioDefault3').value;
       quiz4 = document.getElementById('flexRadioDefault4').value;
       quiz5 = document.getElementById('flexRadioDefault5').value;
